--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "grommet": "^2.15.1",
+    "grommet-icons": "^4.5.0",
+    "i18next": "^19.8.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flag-icon-css": "^1.0.25",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "react-syntax-highlighter": "^12.2.1"
+    "react-syntax-highlighter": "^12.2.1",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "cross-env PORT=4040 react-scripts start",
