--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^7.1.2",
     "grommet": "^2.15.1",
     "grommet-icons": "^4.5.0",
+    "husky": "^4.3.0",
     "i18next": "^19.8.2",
+    "pretty-quick": "^3.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flag-icon-css": "^1.0.25",
@@ -21,6 +23,11 @@
     "react-scripts": "^3.4.3",
     "react-syntax-highlighter": "^12.2.1",
     "styled-components": "^5.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "scripts": {
     "start": "cross-env PORT=4040 react-scripts start",
